// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Resize checkGrammar=false 1`] = `
<Div
  checkGrammar={false}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize checkGrammar=true 1`] = `
<Div
  checkGrammar={true}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize checkHighlight=false 1`] = `
<Div
  checkHighlight={false}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize checkHighlight=true 1`] = `
<Div
  checkHighlight={true}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize checkSpaces=false 1`] = `
<Div
  checkSpaces={false}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize checkSpaces=true 1`] = `
<Div
  checkSpaces={true}
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize className="my-classname" 1`] = `
<Div
  className="uu5-bricks-resize my-classname"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize className="test-classname" 1`] = `
<Div
  className="uu5-bricks-resize test-classname"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize content="This is Content from ContentMixin" 1`] = `
<Div
  className="uu5-bricks-resize"
  content="This is Content from ContentMixin"
  id="uuID"
  mainAttrs={Object {}}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize content=12345 1`] = `
<Div
  className="uu5-bricks-resize"
  content={12345}
  id="uuID"
  mainAttrs={Object {}}
>
  12345
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize controlled=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize controlled=true 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize default props 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize disabled=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize disabled=false 3`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize disabled=true 1`] = `
<Div
  className="uu5-bricks-resize"
  disabled={true}
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize disabled=true 3`] = `
<Div
  className="uu5-bricks-resize"
  disabled={true}
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize dynamic=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize dynamic=true 1`] = `
<Div
  className="uu5-bricks-resize"
  dynamic={true}
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-resize uu-fulltextsearch-0"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize fullTextSearchPriority=0 2`] = `
<Div
  className="uu5-bricks-resize uu-fulltextsearch-0"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize hidden=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize hidden=false 3`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize hidden=true 1`] = `
<Div
  className="uu5-bricks-resize"
  hidden={true}
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize hidden=true 3`] = `
<Div
  className="uu5-bricks-resize"
  hidden={true}
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize id="myId" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="myId"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize id="test-id" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="test-id"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize ignoreHTML=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize ignoreHTML=true 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize name="myName" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  name="myName-inner"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="inline" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="inline"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="inline" 3`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="inline"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="page"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="smallBox" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  nestingLevel="spa"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize noPrint=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize noPrint=true 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize selected=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize selected=true 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  selected={true}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize textCorrector=false 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  textCorrector={false}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize textCorrector=true 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={Object {}}
  textCorrector={true}
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;

exports[`UU5.Bricks.Resize tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-resize"
  id="uuID"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
>
  <ResizeItem
    id="childID"
    key="childID"
  >
    <Span
      content="Content"
      id="childID02"
    />
  </ResizeItem>
  <ResizeObserver
    key="ro"
    onInitialSize={[Function]}
    onResize={[Function]}
  />
</Div>
`;
